@@ -1,34 +1,33 @@
 package com.revature.revworkforce.serviceImpl;
 
 import com.revature.revworkforce.dto.AnnouncementDTO;
+import com.revature.revworkforce.enums.Priority;
 import com.revature.revworkforce.exception.ResourceNotFoundException;
 import com.revature.revworkforce.model.Announcement;
 import com.revature.revworkforce.model.Employee;
 import com.revature.revworkforce.repository.AnnouncementRepository;
 import com.revature.revworkforce.repository.EmployeeRepository;
-import com.revature.revworkforce.service.AuditService;
 import com.revature.revworkforce.service.NotificationService;
 import com.revature.revworkforce.service.impl.AnnouncementServiceImpl;
+import com.revature.revworkforce.service.AuditService;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.MockedStatic;
+import org.mockito.MockitoAnnotations;
+
+import com.revature.revworkforce.security.SecurityUtils;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
 
-@ExtendWith(MockitoExtension.class)
 class AnnouncementServiceImplTest {
 
     @Mock
@@ -46,50 +45,44 @@ class AnnouncementServiceImplTest {
     @InjectMocks
     private AnnouncementServiceImpl announcementService;
 
-    private Announcement announcement;
-    private AnnouncementDTO announcementDTO;
-    private Employee employee;
-
     @BeforeEach
-    void setUp() {
-
-        employee = new Employee();
-        employee.setEmployeeId("EMP001");
-        employee.setFirstName("John");
-        employee.setLastName("Doe");
-
-        announcement = new Announcement();
-        announcement.setAnnouncementId(1L);
-        announcement.setTitle("Test Title");
-        announcement.setMessage("Test Message");
-        announcement.setAnnouncementType("INFO");
-        announcement.setIsActive('Y');
-        announcement.setCreatedBy(employee);
-
-        announcementDTO = new AnnouncementDTO();
-        announcementDTO.setTitle("Test Title");
-        announcementDTO.setMessage("Test Message");
-        announcementDTO.setType("INFO");
+    void setup() {
+        MockitoAnnotations.openMocks(this);
     }
+
+    // =========================
+    // CREATE ANNOUNCEMENT
+    // =========================
 
     @Test
     void createAnnouncement_Success() {
 
+        AnnouncementDTO dto = new AnnouncementDTO();
+        dto.setTitle("System Maintenance");
+        dto.setMessage("Server restart tonight");
+        dto.setPriority(Priority.HIGH);
+
+        Employee emp = new Employee();
+        emp.setEmployeeId("EMP001");
+
         when(employeeRepository.findById("EMP001"))
-                .thenReturn(Optional.of(employee));
+                .thenReturn(Optional.of(emp));
+
+        Announcement saved = new Announcement();
+        saved.setAnnouncementId(1L);
+        saved.setTitle("System Maintenance");
+        saved.setCreatedBy(emp);
 
         when(announcementRepository.save(any(Announcement.class)))
-                .thenReturn(announcement);
+                .thenReturn(saved);
 
         AnnouncementDTO result =
-                announcementService.createAnnouncement(announcementDTO, "EMP001");
+                announcementService.createAnnouncement(dto, "EMP001");
 
-        assertThat(result).isNotNull();
-        assertThat(result.getTitle()).isEqualTo("Test Title");
-
-        verify(announcementRepository).save(any(Announcement.class));
-        verify(notificationService).createAnnouncementForAll(any(Announcement.class));
-        verify(auditService).createAuditLog(eq("EMP001"),
+        assertNotNull(result);
+        verify(notificationService).createAnnouncementForAll(any());
+        verify(auditService).createAuditLog(
+                anyString(),
                 eq("ANNOUNCEMENT_CREATED"),
                 anyString(),
                 anyString(),
@@ -99,53 +92,32 @@ class AnnouncementServiceImplTest {
                 any());
     }
 
+    // =========================
+    // EMPLOYEE NOT FOUND
+    // =========================
+
     @Test
     void createAnnouncement_EmployeeNotFound() {
+
+        AnnouncementDTO dto = new AnnouncementDTO();
 
         when(employeeRepository.findById("EMP001"))
                 .thenReturn(Optional.empty());
 
         assertThrows(ResourceNotFoundException.class,
-                () -> announcementService.createAnnouncement(announcementDTO, "EMP001"));
+                () -> announcementService.createAnnouncement(dto, "EMP001"));
     }
 
-    @Test
-    void updateAnnouncement_Success() {
-
-        when(announcementRepository.findById(1L))
-                .thenReturn(Optional.of(announcement));
-
-        when(announcementRepository.save(any(Announcement.class)))
-                .thenReturn(announcement);
-
-        AnnouncementDTO result =
-                announcementService.updateAnnouncement(1L, announcementDTO);
-
-        assertThat(result).isNotNull();
-
-        verify(announcementRepository).save(any(Announcement.class));
-        verify(auditService).createAuditLog(any(),
-                eq("ANNOUNCEMENT_UPDATED"),
-                anyString(),
-                anyString(),
-                any(),
-                any(),
-                any(),
-                any());
-    }
-
-    @Test
-    void updateAnnouncement_NotFound() {
-
-        when(announcementRepository.findById(1L))
-                .thenReturn(Optional.empty());
-
-        assertThrows(ResourceNotFoundException.class,
-                () -> announcementService.updateAnnouncement(1L, announcementDTO));
-    }
+    // =========================
+    // GET ANNOUNCEMENT
+    // =========================
 
     @Test
     void getAnnouncementById_Success() {
+
+        Announcement announcement = new Announcement();
+        announcement.setAnnouncementId(1L);
+        announcement.setTitle("Test");
 
         when(announcementRepository.findById(1L))
                 .thenReturn(Optional.of(announcement));
@@ -153,62 +125,129 @@ class AnnouncementServiceImplTest {
         AnnouncementDTO result =
                 announcementService.getAnnouncementById(1L);
 
-        assertThat(result).isNotNull();
-        assertThat(result.getId()).isEqualTo(1L);
+        assertEquals("Test", result.getTitle());
     }
 
+    // =========================
+    // UPDATE ANNOUNCEMENT
+    // =========================
+
     @Test
-    void getAllAnnouncements_Success() {
+    void updateAnnouncement_Success() {
 
-        when(announcementRepository.findAllByOrderByCreatedAtDesc())
-                .thenReturn(Arrays.asList(announcement));
+        Announcement existing = new Announcement();
+        existing.setAnnouncementId(1L);
+        
+        AnnouncementDTO dto = new AnnouncementDTO();
+        dto.setTitle("Updated");
 
-        List<Announcement> result =
-                announcementService.getAllAnnouncements();
+        when(announcementRepository.findById(1L))
+                .thenReturn(Optional.of(existing));
 
-        assertThat(result).hasSize(1);
+        when(announcementRepository.save(any()))
+                .thenReturn(existing);
+
+        try (MockedStatic<SecurityUtils> security =
+                mockStatic(SecurityUtils.class)) {
+
+            security.when(SecurityUtils::getCurrentUsername)
+                    .thenReturn("ADMIN");
+
+            announcementService.updateAnnouncement(1L, dto);
+
+            verify(announcementRepository).save(any());
+            verify(auditService).createAuditLog(
+                    anyString(),
+                    eq("ANNOUNCEMENT_UPDATED"),
+                    any(),
+                    any(),
+                    any(),
+                    any(),
+                    any(),
+                    any());
+        }
     }
 
-    @Test
-    void getActiveAnnouncements_Success() {
+    // =========================
+    // GET ACTIVE ANNOUNCEMENTS
+    // =========================
 
-        when(announcementRepository.findActiveAnnouncements(eq('Y'), any(LocalDate.class)))
-                .thenReturn(Arrays.asList(announcement));
+    @Test
+    void getActiveAnnouncements_ReturnList() {
+
+        Announcement announcement = new Announcement();
+        announcement.setAnnouncementId(1L);
+
+        when(announcementRepository.findActiveAnnouncements(any(), any()))
+                .thenReturn(List.of(announcement));
 
         List<AnnouncementDTO> result =
                 announcementService.getActiveAnnouncements();
 
-        assertThat(result).hasSize(1);
+        assertEquals(1, result.size());
     }
+
+    // =========================
+    // DEACTIVATE ANNOUNCEMENT
+    // =========================
 
     @Test
     void deactivateAnnouncement_Success() {
 
+        Announcement announcement = new Announcement();
+        announcement.setAnnouncementId(1L);
+        announcement.setIsActive('Y');
+
         when(announcementRepository.findById(1L))
                 .thenReturn(Optional.of(announcement));
 
-        announcementService.deactivateAnnouncement(1L);
+        try (MockedStatic<SecurityUtils> security =
+                mockStatic(SecurityUtils.class)) {
 
-        assertThat(announcement.getIsActive()).isEqualTo('N');
-        verify(announcementRepository).save(announcement);
+            security.when(SecurityUtils::getCurrentUsername)
+                    .thenReturn("ADMIN");
+
+            announcementService.deactivateAnnouncement(1L);
+
+            verify(announcementRepository).save(announcement);
+        }
     }
+
+    // =========================
+    // DELETE ANNOUNCEMENT
+    // =========================
 
     @Test
     void deleteAnnouncement_Success() {
 
+        Announcement announcement = new Announcement();
+        announcement.setAnnouncementId(1L);
+
         when(announcementRepository.findById(1L))
                 .thenReturn(Optional.of(announcement));
 
-        announcementService.deleteAnnouncement(1L);
+        try (MockedStatic<SecurityUtils> security =
+                mockStatic(SecurityUtils.class)) {
 
-        verify(announcementRepository).delete(announcement);
+            security.when(SecurityUtils::getCurrentUsername)
+                    .thenReturn("ADMIN");
+
+            announcementService.deleteAnnouncement(1L);
+
+            verify(announcementRepository).delete(announcement);
+        }
     }
 
+    // =========================
+    // SCHEDULED TASK
+    // =========================
+
     @Test
-    void deactivateExpiredAnnouncements_Success() {
+    void deactivateExpiredAnnouncements_ShouldCallRepository() {
 
         announcementService.deactivateExpiredAnnouncements();
 
-        verify(announcementRepository).deactivateExpired(any(LocalDate.class));
+        verify(announcementRepository)
+                .deactivateExpired(any(LocalDate.class));
     }
 }
